--- a/mywork_2.0/src/main/webapp/WEB-INF/web.xml
+++ b/mywork_2.0/src/main/webapp/WEB-INF/web.xml
@@ -4,14 +4,12 @@
     xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
     http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
      metadata-complete="true">
+     <!-- 当你使用编辑器编辑该文档的时候，在title处需要显示的名称。你可以改变这个名字，然后用编辑器分别打开，可以看到title的变化 -->
   <display-name>Archetype Created Web Application</display-name>
+
   
-    <welcome-file-list>
-        <welcome-file>/WEB-INF/jsp/user/login.jsp</welcome-file>
-    </welcome-file-list>
- 
- 
-    <!-- 加载spring bean -->
+  
+      <!-- 加载spring bean -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>classpath:applicationContext.xml</param-value>
@@ -23,31 +21,31 @@
  
  
      <!-- 编码过滤器 -->
-    <filter>
-        <filter-name>encodingFilter</filter-name>
-        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-        <async-supported>true</async-supported>
-        <init-param>
-            <param-name>encoding</param-name>
-            <param-value>UTF-8</param-value>
-        </init-param>
-    </filter>
+<!--     <filter> -->
+<!--         <filter-name>encodingFilter</filter-name> -->
+<!--         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class> -->
+<!--         <async-supported>true</async-supported> -->
+<!--         <init-param> -->
+<!--             <param-name>encoding</param-name> -->
+<!--             <param-value>UTF-8</param-value> -->
+<!--         </init-param> -->
+<!--     </filter> -->
  
- 	<filter-mapping>
-		<filter-name>encodingFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+<!--  	<filter-mapping> -->
+<!-- 		<filter-name>encodingFilter</filter-name> -->
+<!-- 		<url-pattern>/*</url-pattern> -->
+<!-- 	</filter-mapping> -->
  
 	<!-- 使用filter实现登录控制 -->
-	<filter>
-		<filter-name>SessionFilter</filter-name>
-		<filter-class>com.tomwu.bookstore.filter.LoginFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>SessionFilter</filter-name>
+<!-- 	<filter> -->
+<!-- 		<filter-name>SessionFilter</filter-name> -->
+<!-- 		<filter-class>com.tomwu.bookstore.filter.LoginFilter</filter-class> -->
+<!-- 	</filter> -->
+<!-- 	<filter-mapping> -->
+<!-- 		<filter-name>SessionFilter</filter-name> -->
 		<!-- 所有的管理页面需要登录后才能访问 -->
-		<url-pattern>/views/*</url-pattern>
-	</filter-mapping>
+<!-- 		<url-pattern>/views/*</url-pattern> -->
+<!-- 	</filter-mapping> -->
  
  
  <!--     Spring MVC servlet -->
@@ -69,5 +67,7 @@
 
 
     
-    
+  
+  
+  
 </web-app>
